# TF2

./: LICENSE  README.md  Reconfigurable_AI_Computing_Program.md
Runtime_Engine/: README.md
Runtime_Engine/TF2_auto_config/: CMakeLists.txt  README.md
Runtime_Engine/TF2_auto_config/inc/: cycles_computation.h  fpganetworkinterface.h  tf2_auto_config.h  tf2_auto_param.h
Runtime_Engine/TF2_auto_config/src/: cycles_computation.cpp  fpganetworkinterface.cpp  tf2_auto_config.cpp  tf2_auto_param.cpp
Runtime_Engine/cnn/: Makefile  full_process_debug.sh  recompile.sh  run.sh
Runtime_Engine/cnn/device/: emu.sh  full_compile.sh
Runtime_Engine/common/: readme.css
TransForm_Kit/Compression/compress_models/: readme.txt
TransForm_Kit/Compression/compress_net/: 4bit_data_format.txt  README.md  run.sh
TransForm_Kit/Compression/faceverify/: README.md  run.sh
TransForm_Kit/DnsChannelpruning/: README.md  channel_pruning.py  dnscp_core.py  find_dnscp_conv.py  finetune.py  main.py  model_convert.py  parse_model.py  run.sh  torchsummary.py  utility.py
TransForm_Kit/ModelConvert/: README.md
TransForm_Kit/ModelConvert/caffe2fpga/: CMakeLists.txt
TransForm_Kit/ModelConvert/caffe2fpga/src/: CMakeLists.txt  caffe2fpga.cpp  fpganetworkinterface.cpp  fpganetworkinterface.h  tools.cpp  tools.h
TransForm_Kit/Quantization/: .README.swp  README.md  config.py  conv7x7_3x3_transfer.py  data_loader.py  feature_write.py  model_loader.py  net_structure.py  quantization.py
TransForm_Kit/Quantization/debug/: CompareError.py  Pytorch-ResNet50-Log2QuantizeLoad-FPGA_Quantize-Batch-2.py  Pytorch-ResNet50-inference-multiprocessing.py  config.py  data_loader.py  feature_write_debug.py  model_loader.py  net_structure.py
TransForm_Kit/Quantization/models/: __init__.py
TransForm_Kit/Quantization/winograd/: README.md  conv7x7_3x3_conversion.py  weight_write.py  (+5 more)
doc/: A_Brief_Guide_on_Implementing_a_New_Model_in_TF2.txt
(+141 files in other folders)
